Fix radio/checkbox icon alignment

--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -39,6 +39,7 @@
   }
 
   .sl-checkbox__icon {
+    display: flex;
     width: var(--sl-toggle-size);
     height: var(--sl-toggle-size);
 
